# sample-apps-for-qualcomm-linux

./: LICENSE  README.md  download_artifacts.sh
GenAI-Solutions/GenAI-Studio/: README.md  docker-compose.yml  docker-run-cdi-hw-acc.json
GenAI-Solutions/GenAI-Studio/Image-Generation/: Dockerfile  Readme.md  run.sh  stable_diffusion_v1_5-v73.py  stable_diffusion_v1_5-v75.py  stable_diffusion_v1_5.py
GenAI-Solutions/GenAI-Studio/Speech-To-Text/: Dockerfile  Readme.md  requirements.txt  whisper_base_en_iq8.py  whisper_base_en_iq9.py
GenAI-Solutions/GenAI-Studio/Text-Generation/: Dockerfile  README.md  generate-config-for-qwen2_5.sh  run.sh
GenAI-Solutions/GenAI-Studio/Text-Generation/src/: CMakeLists.txt  ChatApp.cpp  ChatApp.hpp  Genie.cpp  Genie.hpp  Logger.cpp  Logger.hpp  Main.cpp  PromptHandler.cpp  PromptHandler.hpp
GenAI-Solutions/GenAI-Studio/Text-Generation/src-v73/: CMakeLists.txt  Genie.cpp  Main.cpp  PromptHandler.cpp
GenAI-Solutions/GenAI-Studio/Text-Generation/src-v75/: CMakeLists.txt  Genie.hpp  Logger.hpp  PromptHandler.hpp
GenAI-Solutions/GenAI-Studio/Text-To-Speech/meloTTS/: Dockerfile  OnnxRunnerHelper.py  Readme.md  meloTTS_app.py  requirements.txt  run.sh
GenAI-Solutions/GenAI-Studio/cdi-iq8/: docker-run-cdi-hw-acc.json
GenAI-Solutions/GenAI-Studio/web-ui/: Readme.md  app.py
GenAI-Solutions/GenAI-Studio/web-ui/pages/: ASR.py  Text2Image.py  Text2Speech.py  Text2Text.py
GenAI-Studio/: README.md
GenAI-Studio/Image-Generation/: Dockerfile  requirements.txt  run.sh  stable_diffusion_v1_5.py  utils.patch
GenAI-Studio/Speech-To-Text/: Dockerfile  requirements.txt  run.sh  utils.patch  whisper_base_en.py
GenAI-Studio/Text-Generation/src/: PromptHandler.cpp  PromptHandler.hpp
GenAI-Studio/web-ui/: Dockerfile  README.md  app.py  requirements.txt  run.sh
GenAI-Studio/web-ui/pages/: Text2Image.py  Text2Text.py
Hello-QIM/: Makefile  main.cc
artifacts/configs/GA1.4-rel/: config-metadata-parser.json  config-multistream-batch-inference.json  config-multistream-inference.json  config_classification.json  config_detection.json  config_monodepth.json  manifest-sampleapps-global.json
artifacts/configs/manifests/: manifest-sampleapps-global-qli1.4-Rb3Gen2.json
artifacts/configs/manifests/QLI1.4/qcs6490-rb3gen2-vision-kit/: manifest-sampleapps-global-qli1.4-Rb3Gen2.json
artifacts/configs/manifests/QLI1.5/qcs6490-rb3gen2-vision-kit/: manifest-sampleapps-global-qli1.5-Rb3Gen2.json
artifacts/configs/manifests/QLI1.5/qcs9075-iq-9075-evk/: manifest-sampleapps-global-qli1.5-qcs9075-iq-9075-evk.json
artifacts/configs/manifests/QLI1.6/qcs6490-rb3gen2-vision-kit/: manifest-sampleapps-global-qli1.6-Rb3Gen2.json
artifacts/configs/manifests/QLI1.6/qcs9075-iq-9075-evk/: manifest-sampleapps-global-qli1.6-qcs9075-iq-9075-evk.json
artifacts/configs/manifests/QLI1.7/qcs6490-rb3gen2-vision-kit/: manifest-sampleapps-global-qli1.7-Rb3Gen2.json
artifacts/configs/manifests/QLI1.7/qcs9075-iq-9075-evk/: manifest-sampleapps-global-qli1.7-qcs9075-iq-9075-evk.json
artifacts/json_labels/: classification.json  face_detection.json  face_recognition.json  face_recognition_settings.json  facemap_3dmm_settings.json  hrnet_pose.json  yamnet.json  yolov5.json
artifacts/labels/: detection.labels  dv3-argmax.labels  resnet101.labels
gst-jpeg-display-example/: Makefile  README.md  gst-jpeg-display-example.cc
gst-rtspsrc-stream-example/: Makefile  README.md  gst-rtspsrc-stream.cc
gst-transcode-example/: Makefile  README.md  gst-transcode-example.cc
gst-usb-camera-example/: Makefile  README.md  gst-usb-camera-example.cc
gst-video-compositor/: Makefile  README.md  ReadMe.txt  gst-video-compositor.cc
gst-video-overlay-example/: Makefile  README.md  gst-video-overlay-example.cc
gst-video-transform-example/: Makefile  README.md  gst-video-transform-example.cc
labels/: hrnetpose.labels
qualcomm-linux/Hello-QIM/: Makefile  main.cc
qualcomm-linux/Hello-QIM/include/: gst_sample_apps_utils.h
qualcomm-linux/applications/LiteRT/: object_detection.py
qualcomm-linux/applications/ort_example/: Makefile  main.c
qualcomm-linux/artifacts/configs/GA1.4-rel/: config-audio-classification.json  config-face-recognition.json  config-usb-camera-app.json  config_daisychain_detection_classification.json  config_face_detection.json  config_pose.json  config_segmentation.json
qualcomm-linux/artifacts/configs/manifests/QLI1.6/qcs6490-rb3gen2-vision-kit/: manifest-sampleapps-global-qli1.6-Rb3Gen2.json
qualcomm-linux/artifacts/configs/manifests/QLI1.6/qcs9075-iq-9075-evk/: manifest-sampleapps-global-qli1.6-qcs9075-iq-9075-evk.json
qualcomm-linux/artifacts/configs/manifests/QLI1.7/qcs6490-rb3gen2-vision-kit/: manifest-sampleapps-global-qli1.7-Rb3Gen2.json
qualcomm-linux/artifacts/configs/manifests/QLI1.7/qcs8275-iq-8275-evk/: manifest-sampleapps-global-qli1.7-qcs8275-iq-8275-evk.json
qualcomm-linux/artifacts/configs/manifests/QLI1.7/qcs8275-iq-8275-evk-pro/: manifest-sampleapps-global-qli1.7-qcs8275-iq-8275-evk-pro.json
qualcomm-linux/artifacts/configs/manifests/QLI1.7/qcs9075-iq-9075-evk/: manifest-sampleapps-global-qli1.7-qcs9075-iq-9075-evk.json
qualcomm-linux/artifacts/configs/manifests/QLI2.0/qcs6490-rb3gen2-vision-kit/: manifest.json
qualcomm-linux/artifacts/configs/manifests/QLI2.0/qcs8275-iq-8275-evk-pro/: manifest.json
qualcomm-linux/artifacts/configs/manifests/QLI2.0/qcs9075-iq-9075-evk/: manifest.json
qualcomm-linux/artifacts/configs/manifests/v1/QLI1.5/qcs6490-rb3gen2-vision-kit/: manifest.json
qualcomm-linux/artifacts/json_labels/: classification.json  deeplabv3_resnet50.json  face_recognition_settings.json  hrnet_settings.json  monodepth.json
qualcomm-linux/artifacts/labels/: face_detection.labels  face_landmark.labels  monodepth.labels  yamnet.labels
qualcomm-linux/scripts/: download_artifacts.sh  facedb.py  preprocess.py  setup_hw_benchmarking_app.sh
scripts/: build.sh  download_artifacts.sh  export_model.sh  facedb.py  preprocess.py  setup_hw_benchmarking_app.sh
(+27 files in other folders)
